fix(construction): sets image instead of video if on mobile

--- a/src/app/components/hero/hero.css
+++ b/src/app/components/hero/hero.css
@@ -1,9 +1,16 @@
-.heroVideo {
+.heroVideo, .logo {
     max-width: 100%;
     max-height: 100%;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.logo {
+    height: 150px;
+    width: 150px;
+    background-image: url('../../../assets/images/exellion_logo.png');
+    background-size: cover;
 }
 
 @media only screen and (orientation: landscape) {
